--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "moti": "^0.25.3",
     "react": "18.2.0",
     "react-native": "0.71.10",
+    "react-native-bootsplash": "^4.7.2",
     "react-native-gesture-handler": "^2.11.0",
-    "react-native-reanimated": "^3.2.0"
+    "react-native-reanimated": "^3.2.0",
+    "react-native-safe-area-context": "^4.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
