--- a/package.json
+++ b/package.json
@@ -4,20 +4,36 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "andro": "react-native run-android",
+    "andro": "react-native run-android --active-arch-only",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.0.0",
+    "@react-native-firebase/auth": "^18.0.0",
+    "@react-native-firebase/firestore": "^18.0.0",
+    "@react-native-firebase/storage": "^18.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
     "moti": "^0.25.3",
     "react": "18.2.0",
     "react-native": "0.71.10",
     "react-native-bootsplash": "^4.7.2",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.11.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-reanimated": "^3.2.0",
-    "react-native-safe-area-context": "^4.5.3"
+    "react-native-safe-area-context": "^4.5.3",
+    "react-native-screens": "^3.20.0",
+    "react-native-shared-element": "^0.8.8",
+    "react-native-svg": "^13.9.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-navigation-shared-element": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
