--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.11.0",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-otp-textinput": "^1.0.1",
     "react-native-reanimated": "^3.2.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
@@ -54,6 +55,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
+    "prop-types": "^15.5.7",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
