--- a/ios/esporizon/Info.plist
+++ b/ios/esporizon/Info.plist
@@ -53,14 +53,10 @@
 	<false/>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Ubuntu-Bold.ttf</string>
-		<string>Ubuntu-BoldItalic.ttf</string>
-		<string>Ubuntu-Italic.ttf</string>
-		<string>Ubuntu-Light.ttf</string>
-		<string>Ubuntu-LightItalic.ttf</string>
-		<string>Ubuntu-Medium.ttf</string>
-		<string>Ubuntu-MediumItalic.ttf</string>
-		<string>Ubuntu-Regular.ttf</string>
+		<string>UbuntuMono-Bold.ttf</string>
+		<string>UbuntuMono-BoldItalic.ttf</string>
+		<string>UbuntuMono-Italic.ttf</string>
+		<string>UbuntuMono-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
