--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "andro": "react-native run-android --active-arch-only",
+    "android": "react-native run-android --active-arch-only",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
@@ -20,9 +20,13 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.4.0",
+    "lottie-ios": "^3.4.0",
+    "lottie-react-native": "^5.1.6",
     "moti": "^0.25.3",
     "react": "18.2.0",
     "react-native": "0.71.10",
+    "react-native-awesome-alerts": "^2.0.0",
     "react-native-bootsplash": "^4.7.2",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.11.0",
@@ -34,7 +38,8 @@
     "react-native-shared-element": "^0.8.8",
     "react-native-svg": "^13.9.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-navigation-shared-element": "^3.1.3"
+    "react-navigation-shared-element": "^3.1.3",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
