--- a/ios/esporizon/Info.plist
+++ b/ios/esporizon/Info.plist
@@ -57,6 +57,12 @@
 		<string>UbuntuMono-BoldItalic.ttf</string>
 		<string>UbuntuMono-Italic.ttf</string>
 		<string>UbuntuMono-Regular.ttf</string>
+		<string>JosefinSans-Bold.ttf</string>
+		<string>JosefinSans-BoldItalic.ttf</string>
+		<string>JosefinSans-Italic.ttf</string>
+		<string>JosefinSans-Medium.ttf</string>
+		<string>JosefinSans-MediumItalic.ttf</string>
+		<string>JosefinSans-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
