--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-native-firebase/app": "^18.0.0",
     "@react-native-firebase/auth": "^18.0.0",
     "@react-native-firebase/firestore": "^18.0.0",
@@ -21,6 +22,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
+    "fbjs": "^3.0.5",
     "lottie-ios": "^3.4.0",
     "lottie-react-native": "^5.1.6",
     "moti": "^0.25.3",
@@ -28,15 +30,16 @@
     "react-native": "0.71.10",
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-bootsplash": "^4.7.2",
-    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.11.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-otp-textinput": "^1.0.1",
     "react-native-reanimated": "^3.2.0",
+    "react-native-recoil-persist": "^0.0.6",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-shared-element": "^0.8.8",
     "react-native-svg": "^13.9.0",
+    "react-native-text-gradient": "^0.1.7",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation-shared-element": "^3.1.3",
     "recoil": "^0.7.7"
