--- a/android/link-assets-manifest.json
+++ b/android/link-assets-manifest.json
@@ -40,6 +40,10 @@
     {
       "path": "assets/fonts/UbuntuMono-Regular.ttf",
       "sha1": "e17c11971f57bd8dfab74b9a0881c71a78bd7940"
+    },
+    {
+      "path": "assets/fonts/Vollkorn-Regular.ttf",
+      "sha1": "140a69353ebed05086f2ba9252e306edac43ce5a"
     }
   ]
 }
