--- a/ios/esporizon/Info.plist
+++ b/ios/esporizon/Info.plist
@@ -63,6 +63,7 @@
 		<string>JosefinSans-Medium.ttf</string>
 		<string>JosefinSans-MediumItalic.ttf</string>
 		<string>JosefinSans-Regular.ttf</string>
+		<string>Vollkorn-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
