--- a/ios/esporizon/Info.plist
+++ b/ios/esporizon/Info.plist
@@ -64,6 +64,9 @@
 		<string>JosefinSans-MediumItalic.ttf</string>
 		<string>JosefinSans-Regular.ttf</string>
 		<string>Vollkorn-Regular.ttf</string>
+		<string>Teko-Bold.ttf</string>
+		<string>Teko-Medium.ttf</string>
+		<string>Teko-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
