--- a/ios/link-assets-manifest.json
+++ b/ios/link-assets-manifest.json
@@ -26,6 +26,18 @@
       "sha1": "6536e6e113fbc08c6b53ca4ce261015c462c8718"
     },
     {
+      "path": "assets/fonts/Teko-Bold.ttf",
+      "sha1": "601570b4aadf5e28c41c631e1f3d87ee60d04790"
+    },
+    {
+      "path": "assets/fonts/Teko-Medium.ttf",
+      "sha1": "9b2926fea3daf1c1a13ae8d0d1bfce8218b16460"
+    },
+    {
+      "path": "assets/fonts/Teko-Regular.ttf",
+      "sha1": "af065fdd632f2f58db79b4991e50ca5f7f51fb9c"
+    },
+    {
       "path": "assets/fonts/UbuntuMono-Bold.ttf",
       "sha1": "590d3fa8514adf0169fa18224ccfaab9e7decc7d"
     },
