--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-shared-element": "^0.8.8",
+    "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^13.9.0",
     "react-native-text-gradient": "^0.1.7",
     "react-native-vector-icons": "^9.2.0",
