--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.2",
-    "@react-native-firebase/app": "^18.0.0",
-    "@react-native-firebase/auth": "^18.0.0",
-    "@react-native-firebase/firestore": "^18.0.0",
-    "@react-native-firebase/storage": "^18.0.0",
+    "@react-native-clipboard/clipboard": "^1.11.2",
+    "@react-native-firebase/app": "18.1.0",
+    "@react-native-firebase/auth": "^18.1.0",
+    "@react-native-firebase/dynamic-links": "^18.1.0",
+    "@react-native-firebase/firestore": "^18.1.0",
+    "@react-native-firebase/storage": "^18.1.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "@shopify/flash-list": "^1.4.3",
     "axios": "^1.4.0",
     "fbjs": "^3.0.5",
     "lottie-ios": "^3.4.0",
