--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-firebase/storage": "^18.1.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
@@ -34,15 +35,18 @@
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-bootsplash": "^4.7.2",
     "react-native-gesture-handler": "^2.11.0",
-    "react-native-linear-gradient": "^2.6.2",
+    "react-native-linear-gradient": "^2.7.3",
     "react-native-otp-textinput": "^1.0.1",
+    "react-native-pager-view": "^6.2.0",
     "react-native-reanimated": "^3.2.0",
     "react-native-recoil-persist": "^0.0.6",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-shared-element": "^0.8.8",
+    "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^13.9.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-text-gradient": "^0.1.7",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation-shared-element": "^3.1.3",
